
# add here all files
data_DATA = X.xpm bash.xpm bsh.xpm c++.xpm cc.xpm console.xpm csh.xpm \
	emacs.xpm g++.xpm gbd.xpm gcc.xpm gdb.xpm init.xpm \
	kaudioserver.xpm kbgndwm.xpm kioslave.xpm kpanel.xpm \
	krootwm.xpm ksh.xpm login.xpm lpd.xpm maudio.xpm nxterm.xpm \
	sh.xpm startkde.xpm startx.xpm tcsh.xpm xconsole.xpm \
	xemacs.xpm xinit.xpm xload.xpm xterm.xpm xxgbd.xpm xxgdb.xpm 

datadir = $(kde_datadir)/ktop/pics
