
# add here all files
data_DATA = X.png bash.png bsh.png c++.png cc.png console.png csh.png \
	emacs.png g++.png gbd.png gcc.png gdb.png init.png \
	kaudioserver.png kbgndwm.png kioslave.png kpanel.png \
	krootwm.png ksh.png login.png lpd.png maudio.png nxterm.png \
	sh.png startkde.png startx.png tcsh.png xconsole.png \
	xemacs.png xinit.png xload.png xterm.png xxgbd.png xxgdb.png 

datadir = $(kde_datadir)/ktop/pics
